web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__sort__examples__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\nsort age\n"
snapshot_kind: text
---
SELECT
  *
FROM
  employees
ORDER BY
  age
