web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__sort__examples__2.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\nsort {age, -tenure, +salary}\n"
---
SELECT
  *
FROM
  employees
ORDER BY
  age,
  tenure DESC,
  salary

