web/book/tests/documentation/snapshots/documentation__book__reference__stdlib__transforms__sort__examples__3.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\nsort {s\"substr({first_name}, 2, 5)\"}\n"
---
WITH table_0 AS (
  SELECT
    *,
    substr(first_name, 2, 5) AS _expr_0
  FROM
    employees
)
SELECT
  *
FROM
  table_0
ORDER BY
  _expr_0

